# GLapp

./: .gitignore  AGENTS.md  DEPLOYMENT_WINDOWS.md  MAINTENANCE.md  TEST_PLAN.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routers/: __init__.py  auth.py  reports.py  vouchers.py
app/application/: __init__.py
app/application/dto/: accounting_dto.py
app/core/: security.py
app/domain/: __init__.py  entities.py  services.py  value_objects.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  models.py
scripts/: seed_database.py
scripts/seed_data/: 01_chart_of_accounts.csv  02_customers.csv  03_suppliers.csv  04_products.csv  05_contracts.csv  06_employees.csv  14_opening_balances.csv  15_exchange_rates.csv  16_transactions.csv
tests/: __init__.py  conftest.py
tests/unit/: test_accounting_domain.py
